CHATS_SIT/force-app/main/default/objects/T_LNG_RUN_QUERY_STG__c.object
<CustomObject>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PID__c</fullName>
        <label>PID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Query_Text__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Query Text</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Long Run Query Staging</label>
    <nameField>
        <displayFormat>LRQ-{0}</displayFormat>
        <label>Long Run Query Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Long Run Query Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>